netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-inter-pod
spec:
  podSelector: {}
  ingress:
    - from:
        - podSelector: {}
      ports:
        - protocol: UDP
          port: 1100
        - protocol: UDP
          port: 1101
        - protocol: UDP
          port: 1102
        - protocol: UDP
          port: 1103
        - protocol: UDP
          port: 1104
        - protocol: UDP
          port: 1105
        - protocol: UDP
          port: 1106
        - protocol: UDP
          port: 1107
        - protocol: UDP
          port: 1108
        - protocol: UDP
          port: 1109
  egress:
    - to:
        - podSelector: {}
      ports:
        - protocol: UDP
          port: 1100
        - protocol: UDP
          port: 1101
        - protocol: UDP
          port: 1102
        - protocol: UDP
          port: 1103
        - protocol: UDP
          port: 1104
        - protocol: UDP
          port: 1105
        - protocol: UDP
          port: 1106
        - protocol: UDP
          port: 1107
        - protocol: UDP
          port: 1108
        - protocol: UDP
          port: 1109
  policyTypes:
  - Egress
  - Ingress
